--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="col-md-5 col-xl-5 mb-4">
               <!--Form-->
               <div class="card wow fadeInRight" data-wow-delay="0.3s">
-                <form name="Contact Form" method="post" data-netlify="true">
+                <form name="Contact Form" method="post" data-github="true" data-netlify="true">
                   <div class="card-body z-depth-2" style="background-color: white;">
                     <!--Header-->
                     <div class="text-center">
