--- a/HTML/3th cycle/3th-day.html
+++ b/HTML/3th cycle/3th-day.html
@@ -202,15 +202,15 @@
         <div class="head">
             <div class="video">
                 <div class="text">
-                    <p> 
-                        3х10
-                    </p>          
-                </div>
-             <iframe src="https://iframe.mediadelivery.net/embed/481750/a31932d0-442f-4ef6-9b77-625cf9847d3d?autoplay=false&loop=true&muted=false&preload=true&responsive=true"
+                <p>The video is with a sound</p> 
+                <p>make sure you turn it on</p>         
+            </div>
+             <iframe src="https://iframe.mediadelivery.net/embed/481750/6a35e95a-e121-45b1-b9e7-172ec0c4b125?autoplay=false&loop=true&muted=false&preload=true&responsive=true"
              loading="lazy"  allowfullscreen="true" allow="accelerometer; gyroscope; encrypted-media; picture-in-picture;">
             </iframe>
         </div>
     </div>
+    
     
     <p class="title_numer">Stretching</p>
     <div class="head">
