--- a/index.html
+++ b/index.html
@@ -66,29 +66,31 @@
     </div>
            
 
-    <div class="first_page_container">
-        <div class="head">
-            <h1>Tailored Training and Nutrition for You</h1>
-            <p> DSTraining personalized training
-                and nutrition plans tailored to your unique 
-                goals. Experience the difference with 
-                one-on-one guidance at Step into a new you!
-            </p>
-             <a href="#"><div class="btn">book a consultation</div></a>
+    <div class="head_head_content">
+        <div class="first_page_container">
+            <div class="head">
+                <h1>Tailored Training and Nutrition for You</h1>
+                <p> DSTraining personalized training
+                    and nutrition plans tailored to your unique 
+                    goals. Experience the difference with 
+                    one-on-one guidance at Step into a new you!
+                </p>
+                <a href="#"><div class="btn">book a consultation</div></a>
+            </div>
         </div>
-    </div>
                <!-- /* second section */ -->
 
-    <div class="first_page_SECOND__section">
-        <div class="content">
-            <h1>
-                Unlock Your Potential with Custom Fitness & Nutrition Plans!
-            </h1>
+        <div class="first_page_SECOND__section">
+            <div class="content">
+                <h1>
+                    Unlock Your Potential with Custom Fitness & Nutrition Plans!
+                </h1>
             <!-- <p>
                 StepIntoANewYou provides personalized training and nutrition
                 plans for each customer, ensuring tailored support for 
                 reaching their fitness goals successfully
             </p> -->
+            </div>
         </div>
     </div>
 
