--- a/HTML/1st cycle/1st-day.html
+++ b/HTML/1st cycle/1st-day.html
@@ -30,7 +30,7 @@
                         <li><a href="../../HTML/YourProgram.html">Your Program</a></li>
                         <li><a href="../about.html">About</a></li>
                         <!-- <li><a href="../HTML/comingSoon.html">Pricing</a></li> -->
-                        <li><a href="../../HTML/comingSoon.html">What We Offer</a></li>
+                        <li><a href="../../HTML/whatWeOffer.html">What We Offer</a></li>
                         <li><a href="../../HTML/comingSoon.html">Contact Us</a></li>
                         <li><a href="../../HTML/comingSoon.html">ViP</a></li>
                         <li><a href="../../HTML/comingSoon.html">login</a></li>
@@ -53,7 +53,7 @@
                         <li class="hideOnMobile"><a href="../../HTML/YourProgram.html">Your Program</a></li>
                         <li class="hideOnMobile"><a href="../../HTML/about.html">About</a></li>
                         <!-- <li class="hideOnMobile"><a href="../HTML/comingSoon.html">Pricing</a></li> -->
-                        <li class="hideOnMobile"><a href="../../HTML/comingSoon.html">What We Offer</a></li>
+                        <li class="hideOnMobile"><a href="../../HTML/whatWeOffer.html">What We Offer</a></li>
                         <li class="hideOnMobile"><a href="../../HTML/comingSoon.html">Contact Us</a></li>
                         <li class="hideOnMobile"><a href="../../HTML/comingSoon.html">ViP</a></li>
                         <li class="hideOnMobile"><a href="../../HTML/comingSoon.html">login</a></li>
