--- a/HTML/whatWeOffer.html
+++ b/HTML/whatWeOffer.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/navBarStyle.css">
     <link rel="stylesheet" href="../CSS/about.css">
+    <link rel="stylesheet" href="../CSS/WhatWeOffer.css">
     <title>Document</title>
 </head>
 <body>
 
-    <div class="container bush5marginBottom">
+    <div class="container">
         <div class="content">
             <!-- NAV BAR STARTS -->
             <div class="head_content">
@@ -66,16 +67,14 @@
     </div>    
   
 
+<div class="what_we_offer_container">
+    <div class="head">
+        <h1>What We Offer</h1>
+    </div>
+    <div class="main"></div>
+    <div class="footer"></div>
+</div>
 
-<!-- <div class="videoss">
-    <iframe src="https://player.vimeo.com/video/1110891094?title=0
-        &amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0
-        &amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay;
-        fullscreen; picture-in-picture; clipboard-write; encrypted-media; 
-        web-share" referrerpolicy="strict-origin-when-cross-origin" 
-        title="Fake Fitness Progress">
-    </iframe>
-</div> -->
 
 
 
