--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li><a href="HTML/YourProgram.html">Your Program</a></li>
                         <li><a href="HTML/about.html">About</a></li>
                         <!-- <li><a href="HTML/comingSoon.html">Pricing</a></li> -->
-                        <li><a href="HTML/comingSoon.html">What We Offer</a></li>
+                        <li><a href="HTML/whatWeOffer.html">What We Offer</a></li>
                         <li><a href="HTML/comingSoon.html">Contact Us</a></li>
                         <li><a href="HTML/comingSoon.html">ViP</a></li>
                         <li><a href="HTML/comingSoon.html">login</a></li>
@@ -53,7 +53,7 @@
                         <li class="hideOnMobile"><a href="HTML/YourProgram.html">Your Program</a></li>
                         <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
                         <!-- <li class="hideOnMobile"><a href="HTML/comingSoon.html">Pricing</a></li> -->
-                        <li class="hideOnMobile"><a href="HTML/comingSoon.html">What We Offer</a></li>
+                        <li class="hideOnMobile"><a href="HTML/whatWeOffer.html">What We Offer</a></li>
                         <li class="hideOnMobile"><a href="HTML/comingSoon.html">Contact Us</a></li>
                         <li class="hideOnMobile"><a href="HTML/comingSoon.html">ViP</a></li>
                         <li class="hideOnMobile"><a href="HTML/comingSoon.html">login</a></li>
@@ -83,15 +83,15 @@
         <div class="first_page_SECOND__section">
             <div class="content">
                 <h1>
-                    Unlock Your Potential with Custom Fitness & Nutrition Plans!
+                   Unlock Your Potential with Custom Fitness & Nutrition Plans!
                 </h1>
             <!-- <p>
                 StepIntoANewYou provides personalized training and nutrition
                 plans for each customer, ensuring tailored support for 
                 reaching their fitness goals successfully
             </p> -->
-            </div>
         </div>
+    </div>
     </div>
 
     <div class="first_page_Third_section">
