--- a/HTML/6th cycle c/1st-day.html
+++ b/HTML/6th cycle c/1st-day.html
@@ -30,7 +30,7 @@
                         <li><a href="../../HTML/YourProgram.html">Your Program</a></li>
                         <li><a href="../../HTML/about.html">About</a></li>
                         <!-- <li><a href="../HTML/comingSoon.html">Pricing</a></li> -->
-                        <li><a href="../../HTML/comingSoon.html">What We Offer</a></li>
+                        <li><a href="../../HTML/whatWeOffer.html">What We Offer</a></li>
                         <li><a href="../../HTML/comingSoon.html">Contact Us</a></li>
                         <li><a href="../../HTML/comingSoon.html">ViP</a></li>
                         <li><a href="../../HTML/comingSoon.html">login</a></li>
