--- a/HTML/YourProgram.html
+++ b/HTML/YourProgram.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/YorProgram.css">
     <link rel="stylesheet" href="../CSS/navBarStyle.css">
-    <title>Audray Schedule</title>
+    <title>Audrey Schedule</title>
 </head>
 <body>
     <div class="container">
@@ -30,7 +30,7 @@
                         <li><a href="../HTML/YourProgram.html">Your Program</a></li>
                         <li><a href="../HTML/about.html">About</a></li>
                         <!-- <li><a href="../HTML/comingSoon.html">Pricing</a></li> -->
-                        <li><a href="../HTML/comingSoon.html">What We Offer</a></li>
+                        <li><a href="../HTML/whatWeOffer.html">What We Offer</a></li>
                         <li><a href="../HTML/comingSoon.html">Contact Us</a></li>
                         <li><a href="../HTML/comingSoon.html">ViP</a></li>
                         <li><a href="../HTML/comingSoon.html">login</a></li>
@@ -53,7 +53,7 @@
                         <li class="hideOnMobile"><a href="../HTML/YourProgram.html">Your Program</a></li>
                         <li class="hideOnMobile"><a href="../HTML/about.html">About</a></li>
                         <!-- <li class="hideOnMobile"><a href="../HTML/comingSoon.html">Pricing</a></li> -->
-                        <li class="hideOnMobile"><a href="../HTML/comingSoon.html">What We Offer</a></li>
+                        <li class="hideOnMobile"><a href="../HTML/whatWeOffer.html">What We Offer</a></li>
                         <li class="hideOnMobile"><a href="../HTML/comingSoon.html">Contact Us</a></li>
                         <li class="hideOnMobile"><a href="../HTML/comingSoon.html">ViP</a></li>
                         <li class="hideOnMobile"><a href="../HTML/comingSoon.html">login</a></li>
