--- a/HTML/1st cycle/3th-day.html
+++ b/HTML/1st cycle/3th-day.html
@@ -238,7 +238,7 @@
             Have a nice day and don't forget - tomorrow 
         may be a break from training, but the warm-up 
         video is recommended for every day. <br>
-        thank you for letting us to be part of your journey with "Step into a new you"- 
+        thank you for letting us to be part of your journey with "DSTraining"- 
         we will do our best to achieve each and everyone of your goals.
         </p>
         
