--- a/HTML/MY-SCHEDULE/my-schedule-Tue.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Tue.html
@@ -227,7 +227,7 @@
     </main>
 
     <div class="logo-footer">
-      <img src="../../images/logo.png" alt="" />
+      <img src="../../images/winter/лого-christmas.png" alt="" />
     </div>
 
     <footer>
