--- a/HTML/MY-SCHEDULE/my-schedule-Wed.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Wed.html
@@ -225,7 +225,7 @@
     </main>
 
     <div class="logo-footer">
-      <img src="../../images/logo.png" alt="" />
+      <img src="../../images/winter/лого-christmas.png" alt="" />
     </div>
 
     <footer>
