--- a/HTML/MY-SCHEDULE/my-schedule-Fri.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Fri.html
@@ -58,14 +58,15 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
+      <div class="hero-sub-title"><p>Friday 05/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
       <div class="main-head">
-        <p class="welcome-percona-name">Hi Audrey</p>
+        <!-- <p class="welcome-percona-name">Hi Audrey</p> -->
         <div class="main-head-title">
           <h1>
-            Audrey, How do you want to feel next summer FIT or JEALOUS?
+            Hi Audrey, How do you want to feel next summer FIT or JEALOUS?
             <!-- <br /><span>- Reginald Red</span> -->
           </h1>
         </div>
@@ -85,10 +86,10 @@
             <div>fri</div>
             <div>sat</div>
             <div>sun</div>
-            <a id="training" href="my-schedule-Mon.html">01</a>
-            <a id="training" href="my-schedule-Tue.html">02</a>
-            <a id="training" href="my-schedule-Wed.html">03</a>
-            <a id="training" href="my-schedule-Thu.html">04</a>
+            <a id="training" class="finished">01</a>
+            <a id="training" class="finished">02</a>
+            <a id="training" class="finished">03</a>
+            <a id="training" class="finished">04</a>
             <a id="training" class="today" href="my-schedule-Fri.html">05</a>
             <a>06</a>
             <a>07</a>
