--- a/HTML/MY-SCHEDULE/my-schedule-Mon.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Mon.html
@@ -58,17 +58,16 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
+      <div class="hero-sub-title"><p>Monday 08/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
       <div class="main-head">
-        <!-- <p class="welcome-percona-name">Hi, Audrey</p> -->
+        <p class="welcome-percona-name">Hi, Audrey</p>
         <div class="main-head-title">
           <h1>
-            Enjoy the start of the holiday season with festive cheer, <br />
-            express a desire for a month of joy and light <br /><span
-              >- For Audrey and family</span
-            >
+            The difference between ‘what you want and what you need' is self-control
+            
           </h1>
         </div>
         <div class="button">
@@ -87,25 +86,25 @@
             <div>Fri</div>
             <div>Sat</div>
             <div>Sun</div>
-            <a id="training" class="today" href="my-schedule-Mon.html">01</a>
-            <a id="training" href="my-schedule-Tue.html">02</a>
-            <a id="training" href="my-schedule-Wed.html">03</a>
-            <a id="training" href="my-schedule-Thu.html">04</a>
+            <a id="training" class="finished">01</a>
+            <a id="training" class="finished">02</a>
+            <a id="training" class="finished">03</a>
+            <a id="training" class="finished">04</a>
             <a id="training" href="my-schedule-Fri.html">05</a>
             <a>06</a>
             <a>07</a>
-            <a id="training" href="my-schedule-Mon.html">08</a>
+            <a id="training" class="today" href="my-schedule-Mon.html">08</a>
             <a id="training" href="my-schedule-Tue.html">09</a>
-            <a id="training" href="#">10</a>
-            <a id="training" href="#">11</a>
-            <a id="training" href="#">12</a>
+            <a id="training" href="my-schedule-Wed.html">10</a>
+            <a id="training" href="my-schedule-Thu.html">11</a>
+            <a id="training" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
             <a id="training" href="my-schedule-Mon.html">15</a>
             <a id="training" href="my-schedule-Tue.html">16</a>
-            <a id="training" href="#">17</a>
-            <a id="training" href="#">18</a>
-            <a id="training" href="#">19</a>
+            <a id="training" href="my-schedule-Wed.html">17</a>
+            <a id="training" href="my-schedule-Thu.html">18</a>
+            <a id="training" href="my-schedule-Fri.html">19</a>
             <a>20</a>
             <a>21</a>
             <a id="training" href="my-schedule-Mon.html">22</a>
