--- a/HTML/MY-SCHEDULE/my-schedule-Wed.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Wed.html
@@ -58,6 +58,7 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
+      <div class="hero-sub-title"><p> Wednesday 03/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
@@ -65,7 +66,7 @@
         <p class="welcome-percona-name">Hi Audrey</p>
         <div class="main-head-title">
           <h1>
-            DumbBells DumbBells Dumbbells All The Way
+            Sing Audrey - DumbBells DumbBells Dumbbells All The Way
             <br /><span> 😂 </span>
           </h1>
         </div>
@@ -85,18 +86,18 @@
             <div>fri</div>
             <div>sat</div>
             <div>sun</div>
-            <a id="training" href="my-schedule-Mon.html">01</a>
-            <a id="training" href="my-schedule-Tue.html">02</a>
-            <a id="training" class="today" href="my-schedule-Wed.html">03</a>
-            <a id="training" href="my-schedule-Thu.html">04</a>
+            <a id="training" class="finished">01</a>
+            <a id="training" class="finished">02</a>
+            <a id="training" class="finished">03</a>
+            <a id="training" class="finished">04</a>
             <a id="training" href="my-schedule-Fri.html">05</a>
             <a>06</a>
             <a>07</a>
             <a id="training" href="my-schedule-Mon.html">08</a>
             <a id="training" href="my-schedule-Tue.html">09</a>
-            <a id="training" href="#">10</a>
-            <a id="training" href="#">11</a>
-            <a id="training" href="#">12</a>
+            <a id="training" class="today" href="my-schedule-Wed.html">10</a>
+            <a id="training" href="my-schedule-Thu.html">11</a>
+            <a id="training" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
             <a id="training" href="my-schedule-Mon.html">15</a>
