--- a/HTML/MY-SCHEDULE/my-schedule-Mon.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Mon.html
@@ -66,8 +66,9 @@
         <p class="welcome-percona-name">Hi, Audrey</p>
         <div class="main-head-title">
           <h1>
-            The difference between ‘what you want and what you need' is self-control
-            
+            Enjoy the start of the holiday season with festive cheer, express a
+            desire for a month of joy and light
+            <br /><span>- For Audrey and family </span>
           </h1>
         </div>
         <div class="button">
