--- a/HTML/MY-SCHEDULE/my-schedule-Tue.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Tue.html
@@ -68,7 +68,7 @@
         <div class="main-head-title">
           <h1>
             Enjoy your workout
-            <!-- <br /><span>- Walt Disney </span> -->
+            <!-- <br /><span>- For Audrey and family </span> -->
           </h1>
         </div>
         <div class="button">
