--- a/HTML/MY-SCHEDULE/my-schedule-Thu.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Thu.html
@@ -91,7 +91,7 @@
             <a id="training" class="finished">02</a>
             <a id="training" class="finished">03</a>
             <a id="training" class="finished">04</a>
-            <a id="training" href="my-schedule-Fri.html">05</a>
+            <a id="training" class="finished">05</a>
             <a>06</a>
             <a>07</a>
             <a id="training" href="my-schedule-Mon.html">08</a>
