--- a/HTML/MY-SCHEDULE/my-schedule-Fri.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Fri.html
@@ -58,7 +58,7 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
-      <div class="hero-sub-title"><p>Friday 05/12/2025</p></div>
+      <div class="hero-sub-title"><p>Friday 12/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
@@ -90,14 +90,14 @@
             <a id="training" class="finished">02</a>
             <a id="training" class="finished">03</a>
             <a id="training" class="finished">04</a>
-            <a id="training" class="today" href="my-schedule-Fri.html">05</a>
+            <a id="training" class="finished">05</a>
             <a>06</a>
             <a>07</a>
             <a id="training" href="my-schedule-Mon.html">08</a>
             <a id="training" href="my-schedule-Tue.html">09</a>
             <a id="training" href="my-schedule-Wed.html">10</a>
             <a id="training" href="my-schedule-Thu.html">11</a>
-            <a id="training" href="my-schedule-Fri.html">12</a>
+            <a id="training" class="today" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
             <a id="training" href="my-schedule-Mon.html">15</a>
