--- a/HTML/MY-SCHEDULE/my-schedule-Fri.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Fri.html
@@ -93,10 +93,10 @@
             <a id="training" class="finished">05</a>
             <a>06</a>
             <a>07</a>
-            <a id="training" href="my-schedule-Mon.html">08</a>
-            <a id="training" href="my-schedule-Tue.html">09</a>
-            <a id="training" href="my-schedule-Wed.html">10</a>
-            <a id="training" href="my-schedule-Thu.html">11</a>
+            <a id="training" class="finished">08</a>
+            <a id="training" class="finished">09</a>
+            <a id="training" class="finished">10</a>
+            <a id="training" class="finished">11</a>
             <a id="training" class="today" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
