--- a/HTML/MY-SCHEDULE/my-schedule-Mon.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Mon.html
@@ -58,7 +58,7 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
-      <div class="hero-sub-title"><p>Monday 08/12/2025</p></div>
+      <div class="hero-sub-title"><p>Monday 15/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
@@ -66,9 +66,8 @@
         <p class="welcome-percona-name">Hi, Audrey</p>
         <div class="main-head-title">
           <h1>
-            Enjoy the start of the holiday season with festive cheer, express a
-            desire for a month of joy and light
-            <br /><span>- For Audrey and family </span>
+            Enjoy the month of joy and light
+            <!-- <br /><span>- For Audrey and family </span> -->
           </h1>
         </div>
         <div class="button">
@@ -94,22 +93,22 @@
             <a id="training" class="finished">05</a>
             <a>06</a>
             <a>07</a>
-            <a id="training" class="today" href="my-schedule-Mon.html">08</a>
-            <a id="training" href="my-schedule-Tue.html">09</a>
-            <a id="training" href="my-schedule-Wed.html">10</a>
+            <a id="training" class="finished">08</a>
+            <a id="training" class="finished">09</a>
+            <a id="training" class="finished">10</a>
             <a id="training" href="my-schedule-Thu.html">11</a>
             <a id="training" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
-            <a id="training" href="my-schedule-Mon.html">15</a>
+            <a id="training" class="today" href="my-schedule-Mon.html">15</a>
             <a id="training" href="my-schedule-Tue.html">16</a>
             <a id="training" href="my-schedule-Wed.html">17</a>
             <a id="training" href="my-schedule-Thu.html">18</a>
             <a id="training" href="my-schedule-Fri.html">19</a>
             <a>20</a>
             <a>21</a>
-            <a id="training" href="my-schedule-Mon.html">22</a>
-            <a id="training" href="my-schedule-Tue.html">23</a>
+            <a id="training" href="#">22</a>
+            <a id="training" href="#">23</a>
             <a id="training" href="#">24</a>
             <a id="training" href="#">25</a>
             <a id="training" href="#">26</a>
