--- a/HTML/MY-SCHEDULE/my-schedule-Thu.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Thu.html
@@ -94,18 +94,18 @@
             <a id="training" class="finished">05</a>
             <a>06</a>
             <a>07</a>
-            <a id="training" href="my-schedule-Mon.html">08</a>
-            <a id="training" href="my-schedule-Tue.html">09</a>
-            <a id="training" href="my-schedule-Wed.html">10</a>
+            <a id="training" class="finished">08</a>
+            <a id="training" class="finished">09</a>
+            <a id="training" class="finished">10</a>
             <a id="training" class="today" href="my-schedule-Thu.html">11</a>
             <a id="training" href="my-schedule-Fri.html">12</a>
             <a>13</a>
             <a>14</a>
-            <a id="training" href="#">15</a>
-            <a id="training" href="#">16</a>
-            <a id="training" href="#">17</a>
-            <a id="training" href="#">18</a>
-            <a id="training" href="#">19</a>
+            <a id="training" href="my-schedule-Mon.html">15</a>
+            <a id="training" href="my-schedule-Tue.html">16</a>
+            <a id="training" href="my-schedule-Wed.html">17</a>
+            <a id="training" href="my-schedule-Thu.html">18</a>
+            <a id="training" href="my-schedule-Fri.html">19</a>
             <a>20</a>
             <a>21</a>
             <a id="training" href="#">22</a>
