--- a/HTML/MY-SCHEDULE/my-schedule-Fri.html
+++ b/HTML/MY-SCHEDULE/my-schedule-Fri.html
@@ -58,7 +58,7 @@
 
     <div class="hero">
       <div class="hero-title"><h1>my schedule</h1></div>
-      <div class="hero-sub-title"><p>Friday 12/12/2025</p></div>
+      <div class="hero-sub-title"><p>Friday 19/12/2025</p></div>
     </div>
 
     <main class="months-all-mob">
@@ -66,7 +66,7 @@
         <!-- <p class="welcome-percona-name">Hi Audrey</p> -->
         <div class="main-head-title">
           <h1>
-            Hi Audrey, How do you want to feel next summer FIT or JEALOUS?
+            Wishing you a blessed 2026. May this year bring divine guidance, strength in challenges, and countless reasons to smile with gratitude.
             <!-- <br /><span>- Reginald Red</span> -->
           </h1>
         </div>
@@ -76,53 +76,7 @@
       </div>
 
       <div class="main-flex">
-        <div class="display-none main-middle-container">
-          <div class="main-middle-title">December 2025</div>
-          <div class="main-middle">
-            <div>Mon</div>
-            <div>Tue</div>
-            <div>wed</div>
-            <div>thu</div>
-            <div>fri</div>
-            <div>sat</div>
-            <div>sun</div>
-            <a id="training" class="finished">01</a>
-            <a id="training" class="finished">02</a>
-            <a id="training" class="finished">03</a>
-            <a id="training" class="finished">04</a>
-            <a id="training" class="finished">05</a>
-            <a>06</a>
-            <a>07</a>
-            <a id="training" class="finished">08</a>
-            <a id="training" class="finished">09</a>
-            <a id="training" class="finished">10</a>
-            <a id="training" class="finished">11</a>
-            <a id="training" class="today" href="my-schedule-Fri.html">12</a>
-            <a>13</a>
-            <a>14</a>
-            <a id="training" href="my-schedule-Mon.html">15</a>
-            <a id="training" href="my-schedule-Tue.html">16</a>
-            <a id="training" href="my-schedule-Wed.html">17</a>
-            <a id="training" href="my-schedule-Thu.html">18</a>
-            <a id="training" href="my-schedule-Fri.html">19</a>
-            <a>20</a>
-            <a>21</a>
-            <a id="training" href="my-schedule-Mon.html">22</a>
-            <a id="training" href="my-schedule-Tue.html">23</a>
-            <a id="training" href="my-schedule-Wed.html">24</a>
-            <a id="training" href="my-schedule-Thu.html">25</a>
-            <a id="training" href="my-schedule-Fri.html">26</a>
-            <a>27</a>
-            <a>28</a>
-            <a id="training" href="my-schedule-Mon.html">29</a>
-            <a id="training" href="my-schedule-Tue.html">30</a>
-            <a id="training" href="my-schedule-Wed.html">31</a>
-            <a class="last-month">01</a>
-            <a class="last-month">02</a>
-            <a class="last-month">03</a>
-            <a class="last-month">04</a>
-          </div>
-        </div>
+        
         <div class="display-none main-middle-container">
           <div class="main-middle-title">January 2026</div>
           <div class="main-middle">
@@ -136,8 +90,8 @@
             <a class="last-month">29</a>
             <a class="last-month">30</a>
             <a class="last-month">31</a>
-            <a id="training" href="#">01</a>
-            <a id="training" href="#">02</a>
+            <a id="training" href="my-schedule-Thu.html">01</a>
+            <a id="training" class="today" href="my-schedule-Fri.html">02</a>
             <a>03</a>
             <a>04</a>
             <a id="training" href="my-schedule-Mon.html">05</a>
